--- a/app/_components/BlogList/index.module.css
+++ b/app/_components/BlogList/index.module.css
@@ -1,7 +1,14 @@
 .list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.item {
     border-bottom: 1px solid var(--color-border-right);
 }
-.list:last-child {
+
+.item:last-child {
     border-bottom: none;
 }
 
@@ -18,16 +25,23 @@
     border-radius: var(--border-radius);
 }
 
+.contents {
+    margin: 0;
+    flex: 1;
+}
+
 .title {
     font-size: 1.1rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+    margin: 0;
 }
 
 .meta {
     display: flex;
     align-items: center;
     gap: 16px;
+    margin: 0;
 }
 
 @media (max-width: 640px) {
