--- a/app/_components/Sheet/index.module.css
+++ b/app/_components/Sheet/index.module.css
@@ -6,3 +6,20 @@
     padding: 80px;
     border-radius: 8px;
 }
+
+@media (max-width: 1000px) {
+    .container {
+        width: calc(100% - 40px);
+        padding: 40px;
+        margin: -20px auto 0;
+    }
+}
+
+@media (max-width: 640px) {
+    .container {
+        width: calc(100% - 24px);
+        padding: 24px;
+        margin: -12px auto 0;
+        border-radius: 4px;
+    }
+}
