--- a/app/Profile/page.module.css
+++ b/app/Profile/page.module.css
@@ -15,6 +15,7 @@
 }
 
 .image {
+  flex-shrink: 0;
   width: 240px;
   height: 240px;
   border-radius: 50%;
@@ -29,6 +30,7 @@
 }
 
 .imagePlaceholder {
+  flex-shrink: 0;
   width: 240px;
   height: 240px;
   border-radius: 50%;
@@ -55,6 +57,8 @@
 
 .profile {
   font-size: 0.9rem;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .footer {
