--- a/app/_components/Article/index.module.css
+++ b/app/_components/Article/index.module.css
@@ -32,6 +32,16 @@
   border-radius: 12px;
 }
 
+.video {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin: 0 auto 64px;
+  border-radius: 12px;
+  aspect-ratio: 16 / 9;
+  border: none;
+}
+
 .content *:first-child {
   margin-top: 0;
 }
